feat: create Comment Module
